[package]
name = "rscron"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
crossbeam-channel = "0.5.13"
num_cpus = "1.16.0"
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"
rand = "0.8.5"
